--- a/FrontEnd/assets/admin.css
+++ b/FrontEnd/assets/admin.css
@@ -10,10 +10,11 @@
   height: 59px;
   background: #000000;
   color: #ffffff;
+  font-size: 16px;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 21px;
+  gap: 0.7em;
   z-index: 10;
 }
 
@@ -24,10 +25,9 @@
 .works-edit {
   position: absolute;
   display: flex;
-  align-items: center;
-  gap: 10px;
+  gap: 0.7em;
   top: 7.5px;
-  left: 700px;
+  left: 685px;
   border: none;
   color: #000000;
   background: none;
@@ -52,7 +52,7 @@
 .modal-container {
   border-radius: 10px;
   background: #ffffff;
-  padding: 60px 100px 45px 100px;
+  padding: 10px 100px 0 100px;
   position: relative;
 }
 
@@ -73,7 +73,7 @@
 
 .close-modal {
   right: 30px;
-  font-size: 16px;
+  font-size: 18px;
 }
 .back-modal {
   left: 30px;
@@ -93,12 +93,7 @@
   font-size: 26px;
 }
 
-.modal label {
-  font-size: 14px;
-  font-weight: 500;
-}
-
-.modal button {
+.valid-button {
   font-family: "Syne";
   font-size: 14px;
   font-weight: 700;
@@ -151,16 +146,19 @@ span.error-message {
   top: 6px;
   right: 4px;
   z-index: 5;
-  padding-top: 2px;
   box-sizing: border-box;
+  border: none;
+  cursor: pointer;
   display: flex;
-  align-items: center;
+  padding: 4px 0;
   justify-content: center;
   background: #000;
   border-radius: 2px;
+}
+
+.icon-container i {
   color: #ffffff;
   font-size: 10.5px;
-  cursor: pointer;
 }
 
 .modal form {
@@ -236,6 +234,11 @@ span.error-message {
   padding-bottom: 32px;
   border-bottom: #b3b3b3 1px solid;
   margin-bottom: 32px;
+}
+
+.modal label {
+  font-size: 14px;
+  font-weight: 500;
 }
 
 .text-input-container label {
