--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -231,13 +231,13 @@ li:hover {
   border: #1d6154 1px solid;
   color: #1d6154;
   font-family: "Syne";
-  font-size: 1em;
+  font-size: 16px;
   font-weight: 700;
   background: none;
 }
 
 .filters-container button.active-filter {
-  color: white;
+  color: #ffffff;
   background: #1d6154;
 }
 
@@ -247,6 +247,7 @@ li:hover {
   grid-template-columns: 1fr 1fr 1fr;
   grid-column-gap: 20px;
   grid-row-gap: 20px;
+  margin-top: 4em;
 }
 
 .gallery img {
